--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 Flask==2.1.3
+Flask-WTF==1.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -11,3 +12,4 @@ PyYAML==6.0
 requests==2.28.1
 urllib3==1.26.12
 Werkzeug==2.1.2
+WTForms==3.0.1
