--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,18 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
-Flask==2.1.3
+Flask==2.2.2
+Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+psycopg2==2.9.5
 PyYAML==6.0
 requests==2.28.1
 SQLAlchemy==1.4.43
 urllib3==1.26.12
-Werkzeug==2.1.2
+Werkzeug==2.2.2
 WTForms==3.0.1
