--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.8.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
@@ -9,6 +10,7 @@ greenlet==2.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.3
 MarkupSafe==2.1.1
 psycopg2==2.9.5
 PyYAML==6.0
